# CPP_Projects

./: 3D bounce ball game.cpp  AI-Powered Chess Engine.cpp  Augmented Reality-Based Navigation App  Automated Stock Trading System.cpp  Banking system simulator  Cab Finder.cpp  Coin Detection.cpp  DistributedFileSystem.h  E-Learning Management System.cpp  Face Detection.cpp  File Compression Utility.cpp  Hangman_game.cpp  Health Monitoring System.cpp  Helicopter Game with SDL Graphics  Helicopter_game.cpp  ImageBlur.cpp  Library_management_system.cpp  Minesweeper_game.cpp  Online Exam System.cpp  Online Food Ordering System.cpp  Online Job Portal.cpp  Online Shopping System.cpp  Online Ticket Reservation System.cpp  Online Voting System.cpp  OpenCV Single-Colored Blank Image.cpp  OpenCV to Blur a Video.cpp  OpenCV to Play a Video.cpp  Phonebook App.cpp  Reality-Based Navigation App  School_management_system.cpp  Search_Engine.cpp  Shape Detection.cpp  Smart Home Automation System  Snake_game.cpp  Text_Editor.cpp  Text_based_Adventure_Game.cpp  Tic_Tac_Toe.cpp  Trading_Application.cpp  Traffic Management System  Traffic_management_system.cpp  (+14 more)
30-day-challenge/DigitalRecipeBook/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  recipeeditor.cpp  recipeeditor.h
Banking_system/: bankingsystem.cpp
CGPA_calculator/: cgpa.cpp
Casino_no_guess/: casino_num_guess.cpp
Finding Nearby Cabs/: Finding Nearby Cabs.cpp  map.html
Inventory_system/: inventory_system.cpp
Login_Registration_System/: login_registration_system.cpp
Payroll_System/: payroll_system.cpp
(+21 files in other folders)
